--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -200,7 +200,8 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -615,6 +616,30 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+.container {
+  width: 92%;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.bar__progress {
+  border-radius: 5px;
+  margin: 0 20px;
+  height: 9px;
+  display: flex;
+  align-items: center;
+}
+
+.bar__progress__knob {
+  position: relative;
+  height: 20px;
+  width: 20px;
+  border: 1.5px solid white;
+  border-radius: 50%;
+  background-color: orange;
+}
+
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
