--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -30,6 +30,15 @@ ul li {
   margin: 0 0.8rem;
 }
 
+ul li a:hover {
+  transition: 300ms ease-in-out;
+}
+
+ul li a:hover {
+  background: black;
+  color: white;
+}
+
 ul li:last-child {
   margin-right: 0;
 }
@@ -37,4 +46,10 @@ ul li:last-child {
 a {
   text-decoration: none;
   color: inherit;
+  padding: 0.3rem;
+  font-weight: 700;
+  color: #999999;
+}
+.active {
+  color: black;
 }
