--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -43,7 +43,7 @@ ul li:last-child {
   margin-right: 0;
 }
 
-a {
+ul li a {
   text-decoration: none;
   color: inherit;
   padding: 0.3rem;
@@ -52,4 +52,7 @@ a {
 }
 .active {
   color: black;
+}
+a {
+  text-decoration: none;
 }
