seo and cleanup

--- a/src/components/creators/creators.module.css
+++ b/src/components/creators/creators.module.css
@@ -1,16 +1,34 @@
 .image_container {
   width: 100%;
-  position: relative;
 }
 .container {
   display: flex;
-  padding: 40px 0;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: column;
+}
+
+.copy {
   width: 100%;
 }
 
 @media screen and (min-width: 768px) {
   .image_container {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .image_container {
+    width: 50%;
+  }
+
+  .copy {
+    width: 50%;
+    padding: 0 40px 40px;
+  }
+
+  .container {
+    flex-direction: row;
   }
 }
