--- a/src/components/mediaPlayer/media.module.css
+++ b/src/components/mediaPlayer/media.module.css
@@ -3,55 +3,69 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: 150px;
   background: white;
   border-top: solid 2px rgb(243, 243, 243);
 }
 
-.info {
+.container {
+  width: 92%;
+  max-width: 960px;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   height: 100%;
 }
 
-.time {
+.info {
+  width: 100%;
+  height: 50%;
+}
+
+.actions {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  padding: 0 1rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (min-width: 1000px) {
+  .mediaplayer {
+    height: 70px;
+  }
+  .container {
+    flex-direction: row;
+  }
+
+  .info {
+    width: 50%;
+    height: 100%;
+  }
+
+  .actions {
+    width: 50%;
+    height: 100%;
+  }
+}
+/* .time {
   display: flex;
   width: 40%;
   height: 100%;
   padding-right: 2rem;
   align-items: center;
   justify-content: space-between;
-}
+} */
 
-.time p {
+/* .time p {
   font-size: 0.8rem;
-}
+} */
 
-.title {
-  height: 100%;
-  width: 40%;
-  margin: 0;
-}
-
-.title p {
-  margin: none;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding-left: 2rem;
-  font-weight: 900;
-}
-
-.action {
-  width: 20%;
-}
-
-.divider {
+/* .divider {
   margin: 0 5px;
-}
+} */
 
-.sidebar {
+/* .sidebar {
   display: flex;
-}
+} */
