Improved image loads usign gatsby image

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -51,7 +51,7 @@ ul li a {
   color: inherit;
   padding: 0.3rem;
   font-weight: 700;
-  color: #999999;
+  color: #4e4e4e;
 }
 .active {
   color: black;
