--- a/src/components/player/player.module.css
+++ b/src/components/player/player.module.css
@@ -8,6 +8,10 @@
   border-bottom: solid 2px rgb(243, 243, 243);
 }
 
+.imageContainer {
+  width: 100%;
+}
+
 .player {
   position: relative;
   height: fit-content;
@@ -97,10 +101,10 @@ button {
     margin-bottom: 1rem;
     align-items: center;
   }
-  .image {
+  .imageContainer {
     width: 200px;
-    height: 200px;
   }
+
   .information {
     width: 65%;
   }
@@ -112,6 +116,7 @@ button {
     transition: 300ms ease-in-out;
     height: 96.5%;
   }
+
   .buttons:hover {
     opacity: 0.6;
     cursor: pointer;
