--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -90,15 +90,22 @@ a {
 .mobilenav ul {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   list-style: none;
-  height: 40%;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
 }
 
 .mobilenav ul li {
   font-size: 4rem;
   width: 100%;
   text-align: center;
+  margin-bottom: 80px;
+  margin: none;
+  height: fit-content;
 }
 
 .buttonclose {
